Improve code quality (doc + readability + more recent Java)
Fix comments